--- a/styles/styles.css
+++ b/styles/styles.css
@@ -91,20 +91,25 @@ img {
     display: flex;
     position: fixed;
     align-items: center;
-    scroll-behavior: smooth;
-    overflow-y: hidden;
   }
   .landing .landing_slides {
-    width: 100%;
-    height: 60%;
-    display: flex;
+    height: 80%;
+    display: grid;
     gap: 1em;
+    grid-auto-flow: column;
+    grid-auto-columns: 80%;
     overflow-x: auto;
-    scroll-behavior: auto;
+    overscroll-behavior-inline: contain;
   }
   .landing .landing_slides .landing_slide {
     min-width: 100%;
     position: relative;
+  }
+  .landing .landing_slides .landing_slide img {
+    inline-size: 100%;
+    aspect-ratio: 16/9;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .landing .landing_slides .landing_slide #slide-cover {
     width: 100%;
@@ -128,7 +133,7 @@ img {
     top: 0;
     color: var(--color-primary);
     font-weight: 900;
-    font-size: 3em;
+    font-size: 4em;
     z-index: 10;
   }
   .landing .landing_slides .landing_slide:nth-child(2):before {
@@ -146,7 +151,7 @@ img {
     top: 0;
     color: var(--color-primary);
     font-weight: 900;
-    font-size: 3em;
+    font-size: 4em;
     z-index: 10;
   }
   .landing .landing_slides .landing_slide:nth-child(4):before {
@@ -155,20 +160,20 @@ img {
     top: 0;
     color: var(--color-primary);
     font-weight: 900;
-    font-size: 3em;
+    font-size: 4em;
     z-index: 10;
   }
 }
 @media (min-width: 35em) {
   .header_menu {
     width: 100%;
-    height: 15%;
+    height: 10%;
     display: flex;
     position: relative;
     align-items: center;
   }
   .header_menu .logo {
-    width: 20%;
+    width: 8%;
     height: 100%;
   }
   .header_menu .logo img {
@@ -178,7 +183,7 @@ img {
        object-fit: contain;
   }
   .header_menu .ham_menu {
-    width: 10%;
+    width: 5%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -202,21 +207,26 @@ img {
     height: 100vh;
     display: flex;
     position: fixed;
-    align-items: center;
-    scroll-behavior: smooth;
-    overflow-y: hidden;
   }
   .landing .landing_slides {
-    width: 100%;
-    height: 60%;
-    display: flex;
+    height: 80%;
+    display: grid;
     gap: 1em;
+    grid-auto-flow: column;
+    grid-auto-columns: 80%;
     overflow-x: auto;
-    scroll-behavior: auto;
+    overscroll-behavior-inline: contain;
   }
   .landing .landing_slides .landing_slide {
     min-width: 100%;
     position: relative;
+    grid-template-rows: min-content;
+  }
+  .landing .landing_slides .landing_slide img {
+    inline-size: 100%;
+    aspect-ratio: 16/9;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .landing .landing_slides .landing_slide #slide-cover {
     width: 100%;
@@ -229,8 +239,8 @@ img {
     margin: 0;
     text-transform: uppercase;
     position: absolute;
-    top: 15%;
-    font-size: 2em;
+    top: 25%;
+    font-size: 5em;
     color: var(--color-grey);
     z-index: 10;
   }
@@ -240,7 +250,7 @@ img {
     top: 0;
     color: var(--color-primary);
     font-weight: 900;
-    font-size: 3em;
+    font-size: 10em;
     z-index: 10;
   }
   .landing .landing_slides .landing_slide:nth-child(2):before {
@@ -249,7 +259,7 @@ img {
     top: 0;
     color: var(--color-primary);
     font-weight: 900;
-    font-size: 3em;
+    font-size: 10em;
     z-index: 10;
   }
   .landing .landing_slides .landing_slide:nth-child(3):before {
@@ -258,7 +268,7 @@ img {
     top: 0;
     color: var(--color-primary);
     font-weight: 900;
-    font-size: 3em;
+    font-size: 10em;
     z-index: 10;
   }
   .landing .landing_slides .landing_slide:nth-child(4):before {
@@ -267,7 +277,7 @@ img {
     top: 0;
     color: var(--color-primary);
     font-weight: 900;
-    font-size: 3em;
+    font-size: 10em;
     z-index: 10;
   }
 }/*# sourceMappingURL=styles.css.map */
