--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -103,21 +103,27 @@ img{
         display: flex;
         position: fixed;
         align-items: center;
-        scroll-behavior: smooth;
-        overflow-y: hidden;
 
 
         .landing_slides{
-            width: 100%;
-            height: 60%;
-            display: flex;
+            height: 80%;
+            display: grid;
             gap: 1em;
+            grid-auto-flow: column;
+            grid-auto-columns: 80%;
+
             overflow-x: auto;
-            scroll-behavior: auto;
+            overscroll-behavior-inline: contain;
             
             .landing_slide{
                 min-width: 100%;
                 position: relative;
+
+                img{
+                    inline-size: 100%;
+                    aspect-ratio: 16 / 9;
+                    object-fit: cover;
+                }
 
                 #slide-cover{
                     width: 100%;
@@ -144,7 +150,7 @@ img{
                     top: 0;
                     color: var(--color-primary);
                     font-weight: 900;
-                    font-size: 3em;
+                    font-size: 4em;
                     z-index: 10;
                 }
                 
@@ -164,7 +170,7 @@ img{
                     top: 0;
                     color: var(--color-primary);
                     font-weight: 900;
-                    font-size: 3em;
+                    font-size: 4em;
                     z-index: 10;
                 }
 
@@ -174,7 +180,7 @@ img{
                     top: 0;
                     color: var(--color-primary);
                     font-weight: 900;
-                    font-size: 3em;
+                    font-size: 4em;
                     z-index: 10;
                 }
             }
@@ -186,13 +192,13 @@ img{
 @media (min-width:35em){
     .header_menu{
         width: 100%;
-        height: 15%;
+        height: 10%;
         display: flex;
         position: relative;
         align-items: center;
 
         .logo{
-            width: 20%;
+            width: 8%;
             height: 100%;
 
             img{
@@ -203,7 +209,7 @@ img{
         }
 
         .ham_menu{
-            width: 10%;
+            width: 5%;
             height: 100%;
             display: flex;
             flex-direction: column;
@@ -230,22 +236,28 @@ img{
         height: 100vh;
         display: flex;
         position: fixed;
-        align-items: center;
-        scroll-behavior: smooth;
-        overflow-y: hidden;
 
 
         .landing_slides{
-            width: 100%;
-            height: 60%;
-            display: flex;
+            height: 80%;
+            display: grid;
             gap: 1em;
+            grid-auto-flow: column;
+            grid-auto-columns: 80%;
+
             overflow-x: auto;
-            scroll-behavior: auto;
+            overscroll-behavior-inline: contain;
             
             .landing_slide{
                 min-width: 100%;
                 position: relative;
+                grid-template-rows: min-content;
+
+                img{
+                    inline-size: 100%;
+                    aspect-ratio: 16 / 9;
+                    object-fit: cover;
+                }
 
                 #slide-cover{
                     width: 100%;
@@ -260,8 +272,8 @@ img{
                     margin: 0;
                     text-transform: uppercase;
                     position: absolute;
-                    top: 15%;
-                    font-size: 2em;
+                    top: 25%;
+                    font-size: 5em;
                     color: var(--color-grey);
                     z-index: 10;
                 }
@@ -272,7 +284,7 @@ img{
                     top: 0;
                     color: var(--color-primary);
                     font-weight: 900;
-                    font-size: 3em;
+                    font-size: 10em;
                     z-index: 10;
                 }
                 
@@ -282,7 +294,7 @@ img{
                     top: 0;
                     color: var(--color-primary);
                     font-weight: 900;
-                    font-size: 3em;
+                    font-size: 10em;
                     z-index: 10;
                 }
 
@@ -292,7 +304,7 @@ img{
                     top: 0;
                     color: var(--color-primary);
                     font-weight: 900;
-                    font-size: 3em;
+                    font-size: 10em;
                     z-index: 10;
                 }
 
@@ -302,7 +314,7 @@ img{
                     top: 0;
                     color: var(--color-primary);
                     font-weight: 900;
-                    font-size: 3em;
+                    font-size: 10em;
                     z-index: 10;
                 }
             }
